Name:                yesod-ng
Version:             0.0.1
Synopsis:            Higher-level interaction between Yesod and AngularJS
Description:         Library for ease of definition of AngularJS
                     clients and asynchronous delivery of partials for
                     the AngularJS client views.
Homepage:            https://github.com/obscaenvs/yesod-ng
License:             MIT
License-file:        LICENSE
Author:              Fredrik Carlén
Maintainer:          obscaenvs@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules:     Yesod.Angular
  Build-depends:       base               >= 4          && < 5
                     , yesod              >= 1.2
                     , yesod-core         >= 1.0        && < 1.3
                     , yesod-form         >= 1.0        && < 1.4
                     , shakespeare-js     >= 1.0        && <= 1.2
                     , hamlet             >= 1.1 
                     , transformers       >= 0.2        && < 0.4
                     , blaze-html         >= 0.4        && < 0.7
                     , path-pieces        >= 0.1      
                     , template-haskell   >= 2.8
                     , text
                     , containers
                     , aeson
                     , filepath
